# exercises

./: .gitmodules  Algebra.latex  English-handout.latex  MD.latex  MN.latex  RPS.latex  SK_project.pkt  TJA.latex  dowody_Tomasz-referat.latex
AI/: Z04_A_gradient_descent.ipynb  Z04_B_MLE.ipynb  Z04_C_linear_regression.ipynb  Z05_A_linear_regression.ipynb  Z05_B_linear_regression.ipynb  Z05_B_linear_regression_more_examples.ipynb  Z05_C_II.ipynb  Z05_C_linear_regression.ipynb  Z06_A_linear_regression.ipynb  Z06_B_underfitting_vs_overfitting.ipynb  Z06_C_train_test_split.ipynb  Z06_D_GridSearchCV.ipynb  Z06_E_Ridge_Regression.ipynb  Z07_A_Lasso_Regression.ipynb  Z07_C_cross_validation.ipynb  Z07_D_double_cross_validation.ipynb  Z07_E_support_vector_regression.ipynb  Z07_F_random_forest_regressor.ipynb  Z07_G_cross_validation.ipynb  Z08_D_classification_metrics.ipynb  Z08_F_LogisticRegression_regularization.ipynb  Z08_H_Softmax_Regression.ipynb  Z09_A_Stratified_GridSearchCV.ipynb  Z09_C_StandardScaler.ipynb  Z09_D_Pipeline_GridSearchCV.ipynb  Z09_E_Pipeline_GridSearchCV.ipynb  Z09_F_categorical_data.ipynb  Z09_H_roc_curve.ipynb  Z10_A_decision_trees.ipynb  Z10_B_decision_trees_feature_selection.ipynb  Z10_C_ensemble.ipynb  Z10_G_AdaBoost.ipynb  Z10_H_Gradient_Boosting.ipynb  Z10_I_RandomizedSearchB.ipynb  Z11_A_Perceptron.ipynb  Z11_B_Gradient_Descent.ipynb  Z11_D_Logistic_Regression.ipynb  Z11_E_MLPRegressor.ipynb  Z11_G_keras.ipynb  Z11_H_FashionMINT.ipynb  (+28 more)
AI/.ipynb_checkpoints/: Z07_B_ElasticNet_Regression-checkpoint.ipynb  Z08_A_toy_example-checkpoint.ipynb  Z08_B_LogisticRegression_iris-checkpoint.ipynb  Z08_C_LogisticRegression_breast_cancer-checkpoint.ipynb  Z08_D_classification_metrics-checkpoint.ipynb  Z08_E_LogisticRegression_breast_cancer_metrics-checkpoint.ipynb  Z08_G_LogisticRegression_feature_selection_wine-checkpoint.ipynb  Z08_I_linear_SVM-checkpoint.ipynb  Z08_J_polinomina_SVM-checkpoint.ipynb  Z08_K_rbf_SVM-checkpoint.ipynb  Z09_B_Stratified_GridSearchCV-checkpoint.ipynb  Z09_D_Pipeline_GridSearchCV-checkpoint.ipynb  Z09_E_Pipeline_GridSearchCV-checkpoint.ipynb  Z09_F_categorical_data-checkpoint.ipynb  Z09_G_titanic-checkpoint.ipynb  Z10_C_ensemble-checkpoint.ipynb  Z10_D_ensemble-checkpoint.ipynb  Z10_E_random_forests-checkpoint.ipynb  Z10_F_random_forests-checkpoint.ipynb  Z10_I_RandomizedSearch-checkpoint.ipynb  Z11_C_Gradient_Descent_Regression-checkpoint.ipynb  Z11_F_MLPClassifier-checkpoint.ipynb  Z11_I_MNIST-checkpoint.ipynb  Z11_K_activation_function-checkpoint.ipynb  Z11_N_save_model-checkpoint.ipynb  Z11_O_MNIST_BatchNormalization_Dropout-checkpoint.ipynb  Z12_B_EarlyStopping-checkpoint.ipynb  Z12_C_BatchNormalization-checkpoint.ipynb  Z12_F_FashionMINT_optimizer-checkpoint.ipynb  Z12_H_FashionMINT_LearningRateScheduler-checkpoint.ipynb  Z12_K_RandomizedSearchCV-checkpoint.ipynb  (+8 more)
AM1/: 07.tex  14.tex
AM2/: 02.tex  04.tex  06.tex  08.tex  09.tex  10.tex  12.tex
ASD/: algorytmy_geometryczne.latex  egzamin.latex  kolokwium1.latex  zadania.latex
Algebra/: 04.latex  06.latex  07.latex
BSK/: lab7.pkt
CR/: CoAdaptive_Bionic_Limbs-report.latex  Faking_emotions-report.latex  Krakow_Workshop-report.latex  Living_skin_on_robot-report.latex  REPORT.latex  SR3T-report.latex
CSharp/: .gitignore  02_Parliament.cs
EaMC++/12_unit_tests/testMatrix/: CMakeLists.txt  auto.sh
EaMC++/12_unit_tests/testMatrix/cmake-modules/: BoostTestHelper.cmake
EaMC++/12_unit_tests/testMatrix/tests/mixed/: mix_1_operators.cpp
EaMC++/12_unit_tests/testMatrix/tests/static/: 2_access.cpp  3_operators.cpp
P2/: matrix.cpp  tests.cpp
PRNG-paper/: Makefile  program.cpp  references.bib
Robotics/: BMI-paper-report.latex  Depth_vs_Edge_Cues-report.latex  Light_above_knee_leg-report.latex
WWW/: canvas.html  interval_6_times.html  progress.html
_other/: best-of-c.odp
labs/: MD.latex
labs/ASD/repo/: CMakeLists.txt
labs/ASD/repo/cmake/: BoostTestHelper.cmake
labs/ASD/repo/include/: Tree.hpp  ex_1_28.cpp  ex_1_29.hpp
labs/ASD/repo/tests/: tests.cpp
labs/DB1/project/: CMakeLists.txt
labs/DB1/project/include/: base.hpp  clients.hpp  db.hpp  orders.hpp
labs/DB1/project/opis/: opis.latex
labs/DB1/project/src/: CMakeLists.txt  base.cpp  clients.cpp  db.cpp  main.cpp  util.cpp
labs/EaMC++/12_unit_tests/testString/: CMakeLists.txt  auto.sh
labs/EaMC++/12_unit_tests/testString/cmake-modules/: BoostTestHelper.cmake
labs/EaMC++/12_unit_tests/testString/tests/: 3_squareBrackets.cpp  init_testing.hpp
okTesty-raport/: RAPORT.html  README.md
other/: Rubieża Układu Słonecznego.odp  macierze_w_grafice.latex
turing/: unary_subtraction.yml
(+438 files in other folders)
